# trdr

./: CLAUDE.md  pyproject.toml
src/trdr/core/bar_provider/yf_bar_provider/: test_yf_bar_provider.py  yf_bar_provider.py
src/trdr/core/broker/: base_broker.py  models.py  test_order_model.py  test_position_model.py
src/trdr/core/broker/alpaca_broker/: alpaca_broker.py
src/trdr/core/broker/mock_broker/: mock_broker.py  test_mock_broker.py  test_mock_broker_pdt_validation.py
src/trdr/core/security_provider/: models.py  test_security_model.py
src/trdr/core/shared/: models.py
src/trdr/core/trading_context/: trading_context.py
src/trdr/core/trading_engine/: trading_engine.py
src/trdr/test_utils/: fake_yf_download.py  order_generator.py
